# MassiveDynamics

./: .gitignore  ArbiterPools.h  AvxOps.h  AvxVector.h  AvxVector.ixx  CMakeLists.txt  CMakePresets.json  CollisionSolver.cpp  CollisionSolver.h  CollisionSolver2.cpp  CollisionSolver2.h  Constraint.h  Contacts.h  Data.h  Data.ixx  DebugRenderer.h  DebugRenderer.ixx  DebugTypes.h  Dynamics.ixx  ImpulseSolver.cpp  ImpulseSolver.h  ImpulseSolver2.cpp  ImpulseSolver2.h  Integration.h  LICENSE.txt  LatestBuild.7z  MassiveDynamics.cpp  MassiveDynamics.ixx  MassiveDynamics.sln  MassiveDynamics.vcxproj  MassiveDynamics.vcxproj.filters  MxBodyPool.ixx  MxBuffer.ixx  MxSolver.ixx  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorld.ixx  PinJoint.h  Program.cpp  Program.ixx  (+12 more)
Collision/: CollisionData.h  Separation.h
Common/: MathExtras.h  MathTypes.h  PhysicsData.h
DebugRenderer/: DebugRenderer.h  DebugTypes.h
Implementations/: MxScene.ixx
Implementations/Debugging/: MxConsoleLogger.ixx  MxDebugHelper.ixx
Include/: interface.h
Interfaces/: IMxPairGenerator.ixx
Interfaces/Debugging/: IMxDebugHelper.ixx  IMxLogger.ixx
MassiveDynamics/: MassiveDynamics.csproj  Program.cs
PhysicalShapes/: CircleShape.h  PhysicalShape.h  PolygonShape.cpp  PolygonShape.h  SegmentShape.h
Profiling/: Profiling.sln  Profiling.vcxproj  Profiling.vcxproj.filters
Utils/: CollisionUtils.cpp  CollisionUtils.h  GeometryUtils.cpp  GeometryUtils.h  SolverUtils.h
